# sagemaker-exploration

./: README.md  init.sh  platform.excalidraw  run.sh
infra/: app.py  cdk.context.json  pyproject.toml
infra/src/sagemaker_exploration/: __init__.py  domain_construct.py  sagemaker_exploration_stack.py
lambda_functions/lambda_github_workflow_trigger/lambda_layer/python/charset_normalizer-3.4.2.dist-info/: RECORD
lambda_functions/lambda_github_workflow_trigger/lambda_layer/python/cryptography-45.0.3.dist-info/: RECORD
openlineage-playground/: README.md  docker-compose.yaml  marquez.excalidraw  pyproject.toml
openlineage-playground/docker/: init-db.sh  wait-for-it.sh
openlineage-playground/marquez/docker/: up.sh
openlineage-playground/scripts/: pyproject.toml
openlineage-playground/scripts/src/openlineage_playground/: generate_events.py  housing_flow.py  log_housing_events.py  parse_sql.py  script.js  script.json  script.py  write_ml_events.py
openlineage-playground/src/openlineage_playground/: __init__.py
